# django-snacks

./: README.md  db.sqlite3  pyproject.toml
django_snacks_project/: settings.py  urls.py
snacks/: tests.py  urls.py
templates/: about.html  base.html  home.html
tests/: test_django_snacks.py
